src/objects/Apttus_Config2__PriceBreakup__c.object
<CustomObject>
    <description>Represents the price breakup of a product/service</description>
    <fields>
        <fullName>Apttus_Config2__BasePrice__c</fullName>
        <description>The computed base price</description>
        <inlineHelpText>The computed base price</inlineHelpText>
        <label>Base Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BreakupType__c</fullName>
        <description>The price break type</description>
        <inlineHelpText>The price break type</inlineHelpText>
        <label>Breakup Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Related Price</fullName>
                </value>
                <value>
                    <fullName>Tier Price</fullName>
                </value>
                <value>
                    <fullName>Total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LineItemId__c</fullName>
        <description>ID of the associated line item</description>
        <inlineHelpText>ID of the associated line item</inlineHelpText>
        <label>Line Item</label>
        <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
        <relationshipLabel>Price Breakups</relationshipLabel>
        <relationshipName>PriceBreakups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NetUnitPrice__c</fullName>
        <description>The computed net unit price</description>
        <inlineHelpText>The computed net unit price</inlineHelpText>
        <label>Net Unit Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedBasePrice__c</fullName>
        <description>The related base price computed based on the related product/service</description>
        <inlineHelpText>The related base price computed based on the related product/service</inlineHelpText>
        <label>Related Base Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedChargeType__c</fullName>
        <description>The charge type associated with the related product/service</description>
        <inlineHelpText>The charge type associated with the related product/service</inlineHelpText>
        <label>Related Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adjustment</fullName>
                </value>
                <value>
                    <fullName>Implementation Fee</fullName>
                </value>
                <value>
                    <fullName>Installation Fee</fullName>
                </value>
                <value>
                    <fullName>License Fee</fullName>
                </value>
                <value>
                    <fullName>Maintenance Fee</fullName>
                </value>
                <value>
                    <fullName>Sales Tax</fullName>
                </value>
                <value>
                    <fullName>Shipping &amp; Handling</fullName>
                </value>
                <value>
                    <fullName>Standard Price</fullName>
                </value>
                <value>
                    <fullName>Subscription Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedEndDate__c</fullName>
        <description>The end date associated with the related product/service</description>
        <inlineHelpText>The end date associated with the related product/service</inlineHelpText>
        <label>Related End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedExtendedPrice__c</fullName>
        <description>The related extended price is Quantity X Term X Related Base Price</description>
        <inlineHelpText>The related extended price is Quantity X Term X Related Base Price</inlineHelpText>
        <label>Related Extended Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedListPrice__c</fullName>
        <description>The list price associated with the related product/service</description>
        <inlineHelpText>The list price associated with the related product/service</inlineHelpText>
        <label>Related List Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedNetPrice__c</fullName>
        <description>The net price associated with the related product/service</description>
        <inlineHelpText>The net price associated with the related product/service</inlineHelpText>
        <label>Related Net Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the related product</description>
        <inlineHelpText>ID of the related product</inlineHelpText>
        <label>Related Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Price Breakups</relationshipLabel>
        <relationshipName>PriceBreakups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedQuantity__c</fullName>
        <description>The quantity associated with the related product/service</description>
        <inlineHelpText>The quantity associated with the related product/service</inlineHelpText>
        <label>Related Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedSellingFrequency__c</fullName>
        <description>The selling frequency associated with the related product/service</description>
        <inlineHelpText>The selling frequency associated with the related product/service</inlineHelpText>
        <label>Related Selling Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedSellingTerm__c</fullName>
        <description>The selling term associated with the related product/service</description>
        <inlineHelpText>The selling term associated with the related product/service</inlineHelpText>
        <label>Related Selling Term</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedStartDate__c</fullName>
        <description>The start date associated with the related product/service</description>
        <inlineHelpText>The start date associated with the related product/service</inlineHelpText>
        <label>Related Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The breakup sequence</description>
        <inlineHelpText>The breakup sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SubType__c</fullName>
        <description>The user defined sub type</description>
        <inlineHelpText>The user defined sub type</inlineHelpText>
        <label>SubType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TierBasePrice__c</fullName>
        <description>The unit price associated with the tier</description>
        <inlineHelpText>The unit price associated with the tier</inlineHelpText>
        <label>Tier Unit Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TierEndValue__c</fullName>
        <description>The tier end value</description>
        <inlineHelpText>The tier end value</inlineHelpText>
        <label>Tier End Value</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TierExtendedPrice__c</fullName>
        <description>The tier extended price is Tier Quantity X Tier Base Price</description>
        <inlineHelpText>The tier extended price is Tier Quantity X Tier Base Price</inlineHelpText>
        <label>Tier Extended Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TierFlatPrice__c</fullName>
        <description>The flat price associated with the tier</description>
        <inlineHelpText>The flat price associated with the tier</inlineHelpText>
        <label>Tier Flat Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TierQuantity__c</fullName>
        <description>The quantity associated with the tier</description>
        <inlineHelpText>The quantity associated with the tier</inlineHelpText>
        <label>Tier Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TierStartValue__c</fullName>
        <description>The tier start value</description>
        <inlineHelpText>The tier start value</inlineHelpText>
        <label>Tier Start Value</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Type__c</fullName>
        <description>The user defined type</description>
        <inlineHelpText>The user defined type</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Price Breakup</label>
    <nameField>
        <displayFormat>PB-{00000000}</displayFormat>
        <label>Breakup Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Breakups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>